--- a/config.py.sample
+++ b/config.py.sample
@@ -12,8 +12,11 @@ NETWORK = 'MAINNET'
 # NOTIFICATIONS (True or False)
 NOTIFY_SLACK = False
 NOTIFY_TELEGRAM = True
+NOTIFY_DISCORD = False
 
 TELEGRAM_TOKEN = os.environ.get('TELEGRAM_TOKEN', 'paste your access token here')
 TELEGRAM_CHAT_ID = os.environ.get('TELEGRAM_CHAT_ID', 'paste your chat id here')
 SLACK_WEBHOOK_URL = os.environ.get('SLACK_WEBHOOK_URL', 'paste your webhook here')
+DISCORD_BOT_TOKEN = os.environ.get('DISCORD_BOT_TOKEN', 'paste your discord bot token here')
+DISCORD_CHANNEL_ID = os.environ.get('DISCORD_CHANNEL_ID', 'paste your discord channel id here')
 
