--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-terra_sdk
+terra-sdk @ git+https://github.com/terra-money/terra-sdk-python.git@32f65fd08c2c3aa707b0f5242230b5ec8ac9b884
 requests
 Flask
 apscheduler
